syntax = "proto3";

package mcp.system;

service SystemService {
  rpc GetSystemInfo(GetSystemInfoRequest) returns (GetSystemInfoResponse);
  rpc GetProcesses(GetProcessesRequest) returns (GetProcessesResponse);
  rpc GetAuditLogs(GetAuditLogsRequest) returns (GetAuditLogsResponse);
}

message GetSystemInfoRequest {}

message GetSystemInfoResponse {
  float cpu_usage = 1;
  uint64 total_memory = 2;
  uint64 used_memory = 3;
  repeated DiskInfo disks = 4;
}

message DiskInfo {
  string name = 1;
  string mount_point = 2;
  uint64 total_space = 3;
  uint64 available_space = 4;
}

message GetProcessesRequest {}

message GetProcessesResponse {
  repeated ProcessInfo processes = 1;
}

message ProcessInfo {
  uint32 pid = 1;
  string name = 2;
  float cpu_usage = 3;
  uint64 memory = 4;
}

message GetAuditLogsRequest {
  string service = 1;
  string action = 2;
  int32 limit = 3;
}

message GetAuditLogsResponse {
  repeated AuditLogEntry entries = 1;
}

message AuditLogEntry {
  string id = 1;
  string timestamp = 2;
  string action = 3;
  string service = 4;
  string details = 5;
  string result = 6;
  string snapshot_id = 7;
}
